# email-agent

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.beads/: issues.jsonl
.turbo/cache/: 58e4cb1ce08f0167-meta.json  58e4cb1ce08f0167.tar.zst
apps/api/: .env.example  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 17984ec2510b_add_guardrails_fields_to_user_settings_.py  7cce982646c9_initial_schema.py  (+1 more)
apps/api/app/: config.py  dependencies.py  main.py
apps/api/tests/: test_guardrails.py
apps/web/: eslint.config.mjs  next.config.js  next.config.ts  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/hooks/: useEmailSelection.ts
apps/web/lib/: api.ts  utils.ts
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 7cce982646c9_initial_schema.py
backend/app/: main.py
backend/app/api/v1/: auth.py  drafts.py  emails.py  gmail.py  rules.py  settings.py
backend/app/core/: security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  activity.py  gmail_token.py  rule.py  user.py
backend/app/schemas/: auth.py  draft.py  email.py  gmail.py  rule.py
backend/app/services/: oauth_service.py  rule_engine.py
backend/app/workers/: tasks.py  worker.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
specs/: email-agent.md
(+64 files in other folders)
